# moat

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml  dusk_ci.yml
circuit-generator/: Cargo.toml  README.md  country_age.cdef
circuit-generator/src/: cdef.pest  cdef_parser.rs  error.rs  lib.rs  main.rs  types.rs
circuit-generator/tests/: parser.rs
circuit-generator/tests/cdefs/: country_age_not_valid.cdef  country_age_valid1.cdef  country_age_valid2.cdef
data/: secret_key_user
integration-tests/: Cargo.toml
integration-tests/tests/: get_licenses.rs  int_test_lp.rs  int_test_user.rs  issue_license.rs  queries.rs  retrieve_payload.rs  retrieve_requests.rs  retrieve_txs.rs  retrieve_utils.rs  scan_requests.rs  send_request.rs  stake_add_owner.rs  tests.rs  websocket_test.rs  ws_queries.rs
integration-tests/tests/blockchain/: contract_call.rs  get_crs.rs  mod.rs  retrieve_txs.rs  stake_add_owner.rs
integration-tests/tests/citadel/: int_test_lp.rs  int_test_user.rs  issue_license.rs  license_queries.rs  mod.rs  retrieve_requests.rs  send_request.rs
integration-tests/tests/config/: config.toml  lp.json  lp2.json  test_secret_key_lp  test_secret_key_lp_2
integration-tests/tests/test_keys/: test_keys_lp.json
integration-tests/tests/websocket/: mod.rs  ws_client.rs  ws_common.rs  ws_queries.rs  ws_server.rs  ws_test.rs
license-provider/: Cargo.toml  README.md
license-provider/src/: lib.rs  license_issuer.rs  reference_lp.rs
license-provider/tests/: run_lp.rs  test_lp.rs
license-provider/tests/config/: config.toml  lp.json
license-provider/tests/tx/: transactions.json
macros/code-hasher/: Cargo.toml
moat/: CHANGELOG.md  Cargo.toml  README.md
moat-cli/: Cargo.toml  README.md  config.toml
moat-cli-common/: Cargo.toml
moat-cli-common/src/: error.rs
moat-cli-lp/: Cargo.toml  config.toml
moat-cli-lp/src/: args.rs  command.rs  config.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-cli-request/: Cargo.toml  request.json
moat-cli-sp/: Cargo.toml  README.md  config.toml
moat-cli-sp/src/: command.rs  config.rs  error.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-cli-user/: Cargo.toml  README.md
moat-cli-user/src/: args.rs  command.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-cli/moat-cli-common/: Cargo.toml
moat-cli/moat-cli-common/src/: error.rs  lib.rs
moat-cli/moat-cli-lp/: Cargo.toml  README.md
moat-cli/moat-cli-lp/src/: args.rs  command.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-cli/moat-cli-sp/: Cargo.toml  README.md  config.toml
moat-cli/moat-cli-sp/src/: args.rs  command.rs  config.rs  interactor.rs  main.rs  menu.rs  prompt.rs  run_result.rs
moat-cli/moat-cli-user/: Cargo.toml  README.md
moat-cli/moat-cli-user/src/: args.rs  command.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-cli/src/: args.rs  command.rs  interactive.rs  interactor.rs  main.rs  prompt.rs  run_result.rs
moat-core/: CHANGELOG.md  Cargo.toml
moat-core/src/: api.rs  bc_types.rs  block_retriever.rs  citadel_types.rs  error.rs  json_util.rs  lib.rs  payload_extractor.rs  payload_retriever.rs  payload_sender.rs  request.rs  request_creator.rs  request_extractor.rs  request_json.rs  request_retriever.rs  request_scanner.rs  request_sender.rs  retrieval_types.rs  tx_retriever.rs  txs_retriever.rs  types.rs  utils.rs
moat-core/src/blockchain_payloads/: payload_extractor.rs  payload_sender.rs
moat-core/src/blockchain_queries/: crs_getter.rs  mod.rs  tx_awaiter.rs  tx_inquirer.rs
moat-core/src/blockchain_requests/: mod.rs  payload_extractor.rs  payload_retriever.rs  payload_sender.rs  request_scanner.rs  tx_awaiter.rs
moat-core/src/circuit/: license_circuit.rs  mod.rs
moat-core/src/citadel_licenses/: license_user.rs
moat-core/src/citadel_queries/: citadel_inquirer.rs  mod.rs
moat-core/src/citadel_requests/: mod.rs  request_scanner.rs  request_sender.rs
moat-core/src/contract_queries/: block.rs  citadel_inquirer.rs  citadel_inquirer_ws.rs  citadel_types.rs  contract_inquirer.rs  contract_inquirer_ws.rs  mod.rs  stream_aux.rs  ws_types.rs
moat-core/src/license_provider/: license_issuer.rs  reference_lp.rs
moat-core/src/tx_retrievals/: bc_inquirer.rs  mod.rs  tx_awaiter.rs  tx_retriever.rs
moat-core/src/wallet_accessor/: accessor.rs  mod.rs
moat-core/tests/: config.toml  extract_request.rs  request.json  retrieve_blocks.rs  retrieve_payload.rs  retrieve_request.rs  retrieve_txs.rs  scan_requests.rs  scan_transactions.rs  send_request.rs  test_lp.rs  utils.rs
moat-core/tests/request/: request.json
moat-core/tests/tx/: transactions.json  transactions_lp.json  tx_bad_payload.json  tx_no_call_data.json  tx_no_request.json  tx_with_request.json
moat-example/: Cargo.toml  config.toml
moat-example/src/: main.rs
moat-request-cli/: Cargo.toml
moat-request-cli/src/: args.rs  main.rs
moat/src/: api.rs  bc_types.rs  error.rs  json_loader.rs  lib.rs  utils.rs
moat/src/blockchain_payloads/: mod.rs  payload_retriever.rs  payload_sender.rs
moat/src/blockchain_queries/: bc_inquirer.rs  crs_getter.rs  tx_awaiter.rs  tx_inquirer.rs
moat/src/circuit/: mod.rs
moat/src/citadel_licenses/: license_user.rs  mod.rs
moat/src/citadel_queries/: citadel_inquirer.rs  citadel_types.rs
moat/src/citadel_requests/: mod.rs  request_creator.rs  request_scanner.rs  request_sender.rs
moat/src/contract_queries/: contract_inquirer.rs  contract_inquirer_ws.rs  mod.rs  ws_types.rs
moat/src/license_provider/: license_issuer.rs  reference_lp.rs
moat/src/wallet_accessor/: accessor.rs
moat/tests/: extract_request.rs  scan_transactions.rs  test_lp.rs  utils.rs
moat/tests/test_keys/: test_keys_lp.json
moat/tests/tx/: transactions_lp.json  (+2 more)
testing-utils/test-moat-cli/: Cargo.toml  request2.json
testing-utils/test-moat-request/: Cargo.toml
testing-utils/test-moat-request/src/: main.rs
wallet-accessor/: Cargo.toml
wallet-accessor/src/: config.rs  lib.rs  wallet_accessor.rs
wallet-caller-lib/: Cargo.toml
wallet-caller-lib/src/: wallet_accessor.rs
(+5 files in other folders)
