[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
moat-core={ path = "../moat-core" }
license-provider = { path = "../license-provider" }

[dev-dependencies]
dusk-wallet = "0.18"
zk-citadel = { version = "0.4", git = "https://github.com/dusk-network/citadel", tag = "0.4.1-rc.0" }
phoenix-core = { version = "0.20.0-rc.0", features = ["alloc"] }
poseidon-merkle = { version = "0.2.1-rc.0", features = ["rkyv-impl"] }
dusk-jubjub = { version = "0.12", default-features = false }
wallet-accessor = { path = "../wallet-accessor" }
rkyv = { version = "=0.7.39" }
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
tokio-tungstenite = { version = "0.19", default-features = false, features = ["connect"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = "1"
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
toml-base-config = "0.1"
gql_client = "1"
rand = "0.8"
bytecheck = "0.6"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
int_tests = []
exp_tests = []
vol_tests = []
