[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
moat = { path = "../moat-core" }

[dev-dependencies]
dusk-wallet = "0.20.1"
dusk-jubjub = { version = "0.13", default-features = false }
zk-citadel = "0.6.0"
phoenix-core = { version = "0.21", features = ["alloc"] }
poseidon-merkle = { version = "0.3", features = ["rkyv-impl"] }
dusk-pki = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
dusk-plonk = { version = "0.16", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-bls12_381 = "0.12"
rkyv = { version = "=0.7.39" }
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
tokio-tungstenite = { version = "0.19", default-features = false, features = ["connect"] }
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
serde = "1"
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
toml-base-config = "0.1"
gql_client = "1"
rand = "0.8"
bytecheck = "0.6"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dusk-bytes = "0.1"
bytes = "1.4"
futures-core = "0.3"
reqwest = "0.11"

[features]
int_tests = [] #integration tests - require a running Rusk node/cluster
exp_tests = [] #expensive tests - integration tests which take longer time to run
vol_tests = [] #volatile tests - integration tests which require constants' update before running
