[package]
name = "license-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = { git = "https://github.com/dusk-network/wallet-cli.git", rev="1f994b1c" }
zk-citadel = { git = "https://github.com/dusk-network/citadel.git", rev="64844967" }
moat-core={ path = "../moat-core" }
wallet-accessor = { path = "../wallet-accessor" }
dusk-poseidon = { version = "0.30", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-jubjub = { version = "0.12", default-features = false }
dusk-pki = { version = "0.12", default-features = false, features = ["rkyv-impl"] }
rusk-abi = "0.8.0-piecrust.0.5"
rkyv = { version = "0.7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml-base-config = "0.1"
bytecheck = "0.6"
gql_client = "1"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
dusk-bytes = "0.1"
blake3 = "1.3"

[dev-dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
