[package]
name = "license-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = "0.20.1-rc.0"
zk-citadel = "0.5"
moat-core={ path = "../moat-core" }
wallet-accessor = { path = "../wallet-accessor" }
dusk-poseidon = { version = "0.31", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-jubjub = { version = "0.13", default-features = false }
dusk-bls12_381 = "0.12"
dusk-pki = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
rusk-abi = { version = "0.11", default-features = false }
rkyv = { version = "=0.7.39" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml-base-config = "0.1"
bytecheck = "0.6"
gql_client = "1"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
dusk-bytes = "0.1"
blake3 = "1.3"
tracing = "0.1"
sha3 = "0.10"

[dev-dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
