[package]
name = "moat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
toml-base-config = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
#dusk-wallet = "0.14"
#dusk-wallet = { git = "https://github.com/dusk-network/wallet-cli.git", branch = "rkyv" }
dusk-wallet = { path = "../../wallet-cli" }
moat-core = { path = "../moat-core" }
wallet-accessor = { path = "../wallet-accessor" }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
