[package]
name = "moat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = { version = "0.16", git = "https://github.com/dusk-network/wallet-cli", tag = "0.16.0-rc.1a" }
wallet-accessor = { path = "../wallet-accessor" }
moat-core = { path = "../moat-core" }
toml-base-config = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
