[package]
name = "wallet-accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = { git = "https://github.com/dusk-network/wallet-cli.git", rev="1f994b1c" }
dusk-wallet-core = "0.17.1-piecrust.0.5"
phoenix-core = { version = "0.18", features = ["alloc"] }
dusk-bls12_381 = "0.11"
rusk-abi = "0.8.0-piecrust.0.5"
rkyv = { version = "0.7", default-features = false }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml-base-config = "0.1"
blake3 = "1.3"
