[package]
name = "moat-cli-lp"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = "0.20.1"
dusk-jubjub = { version = "0.13", default-features = false }
moat = { path = "../../moat-core" }
moat-cli-common = { path = "../moat-cli-common" }
dusk-pki = "0.13"
zk-citadel = "0.6.0"
rkyv = { version = "=0.7.39" }
toml-base-config = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
requestty = "0.4.1"
hex = "0.4"
dusk-bytes = "0.1"
group = "0.13"
bytes = "1.4"
futures-core = "0.3"
reqwest = "0.11"
bytecheck = "0.6"
sha3 = "0.10"
