[package]
name = "test-moat-request"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-wallet = {git = "https://github.com/dusk-network/wallet-cli", branch = "get_ssk"}
wallet-accessor = { path = "../../wallet-accessor" }
moat-core = { path = "../../moat-core" }
toml-base-config = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
